Add async logging